Fixes scrollbar not appearing for expandable-side-menu

--- a/src/features/datavisualizer/VisualizationStep.css
+++ b/src/features/datavisualizer/VisualizationStep.css
@@ -236,7 +236,7 @@ input[type=range]::-moz-range-thumb {
 
 .main-visualization .expandable-side-menu {
     width: max(250px, 50vw);
-    min-height: min(calc(var(--desktop-chart-settings-height) * 1px), 100vh);
+    max-height: min(calc(var(--desktop-chart-settings-height) * 1px), 100vh);
     background-color: var(--background-color);
     border-bottom-right-radius: var(--border-radius);
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -250,7 +250,7 @@ input[type=range]::-moz-range-thumb {
 }
 
 .main-visualization .expandable-side-menu-content {
-    min-height: min(calc(var(--desktop-chart-settings-height) * 1px), 100vh);
+    max-height: min(calc(var(--desktop-chart-settings-height) * 1px), 100vh);
 }
 
 .main-visualization .expandable-side-menu.expanded .expandable-side-menu-content {
